--- a/index.html
+++ b/index.html
@@ -5,37 +5,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emergency Service</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <!-- Tailwind & Daisy UI -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
 <body class="font-sans">
 
     <!-- Navbar -->
-    <div class="navbar bg-white shadow-md">
+    <div class="navbar bg-white shadow-md container mx-auto">
         <div class="flex-1">
             <a class="flex items-center gap-2">
-                <img src="your-logo.png" alt="logo" class="w-10 h-10" />
+                <img src="./assets/logo.png" alt="logo" class="w-10 h-10" />
                 <span class="text-lg font-bold text-green-800">Emergency <br /> Service</span>
             </a>
         </div>
         <div class="flex gap-2">
-            <button class="btn btn-sm bg-green-50 text-red-600 border-none">
-                <span>0</span> ❤️
-            </button>
-            <button class="btn btn-sm bg-green-50 text-yellow-600 border-none">
-                <span>100</span> 🪙
-            </button>
-            <button class="btn btn-sm bg-green-600 text-white border-none">
+            <div class="rounded-3xl py-2 px-5 bg-green-200  border-none flex  items-center ">
+                <span class="px-2 font-bold">0</span>
+                <img class="w-4" src="./assets/coin.png" alt="">
+            </div>
+            <div class="rounded-3xl py-2 px-3 bg-green-200  border-none flex  items-center ">
+                <span class="px-2 font-bold">100</span>
+                <img class="w-4" src="./assets/coin.png" alt="">
+            </div>
+            <div class="= rounded-3xl py-2 px-3   bg-green-600 text-white border-none">
                 2 Copy
-            </button>
+            </div>
         </div>
     </div>
 
     <!-- Hero Section -->
     <div class="hero min-h-[300px] bg-gradient-to-r from-green-900 to-green-700">
         <div class="hero-content text-center flex flex-col">
-            <img src="your-logo.png" alt="BD logo" class="w-20 h-20 mb-4" />
+            <img src="./assets/logo.png" alt="BD logo" class="w-20 h-20 mb-4" />
             <h1 class="text-2xl md:text-4xl font-bold text-white">
                 Emergency Service Directory
             </h1>
