--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <div class="flex-1">
             <a class="flex items-center gap-2">
                 <img src="./assets/logo.png" alt="logo" class="w-10 h-10" />
-                <span class="text-lg font-bold text-green-800">Emergency <br /> Service</span>
+                <span class="text-lg lg:text-xl font-bold text-green-800">Emergency <br /> Helpline</span>
             </a>
         </div>
         <div class="flex gap-2">
             <div class="rounded-3xl py-2 px-5 bg-green-200  border-none flex  items-center ">
                 <span class="px-2 font-bold">0</span>
-                <img class="w-4" src="./assets/coin.png" alt="">
+                <img class="w-4" src="./assets/heart.png" alt="">
             </div>
             <div class="rounded-3xl py-2 px-3 bg-green-200  border-none flex  items-center ">
                 <span class="px-2 font-bold">100</span>
@@ -38,9 +38,9 @@
     <!-- Hero Section -->
     <div class="hero min-h-[300px] bg-gradient-to-r from-green-900 to-green-700">
         <div class="hero-content text-center flex flex-col">
-            <img src="./assets/logo.png" alt="BD logo" class="w-20 h-20 mb-4" />
+            <img src="./assets/logo-dark.png" alt="BD logo" class="w-20 h-20 mb-4" />
             <h1 class="text-2xl md:text-4xl font-bold text-white">
-                Emergency Service Directory
+                Emergency Helpline
             </h1>
             <p class="text-white mt-2 text-sm md:text-base">
                 Government Emergency Services at Your Fingertip – A Project by <br />
