--- a/index.html
+++ b/index.html
@@ -8,46 +8,169 @@
     <!-- Tailwind & Daisy UI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- Lucide Icon -->
+    <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 
 <body class="font-sans">
 
-    <!-- Navbar -->
-    <div class="navbar bg-white shadow-md container mx-auto">
-        <div class="flex-1">
-            <a class="flex items-center gap-2">
-                <img src="./assets/logo.png" alt="logo" class="w-10 h-10" />
-                <span class="text-lg lg:text-xl font-bold text-green-800">Emergency <br /> Helpline</span>
-            </a>
-        </div>
-        <div class="flex gap-2">
-            <div class="rounded-3xl py-2 px-5 bg-green-200  border-none flex  items-center ">
-                <span class="px-2 font-bold">0</span>
-                <img class="w-4" src="./assets/heart.png" alt="">
-            </div>
-            <div class="rounded-3xl py-2 px-3 bg-green-200  border-none flex  items-center ">
-                <span class="px-2 font-bold">100</span>
-                <img class="w-4" src="./assets/coin.png" alt="">
-            </div>
-            <div class="= rounded-3xl py-2 px-3   bg-green-600 text-white border-none">
-                2 Copy
-            </div>
-        </div>
-    </div>
+    <header>
+        <!-- Navbar -->
+        <div class="navbar bg-white shadow-md container mx-auto">
+            <div class="flex-1">
+                <a class="flex items-center gap-2">
+                    <img src="./assets/logo.png" alt="logo" class="w-10 h-10" />
 
-    <!-- Hero Section -->
-    <div class="hero min-h-[300px] bg-gradient-to-r from-green-900 to-green-700">
-        <div class="hero-content text-center flex flex-col">
-            <img src="./assets/logo-dark.png" alt="BD logo" class="w-20 h-20 mb-4" />
-            <h1 class="text-2xl md:text-4xl font-bold text-white">
-                Emergency Helpline
-            </h1>
-            <p class="text-white mt-2 text-sm md:text-base">
-                Government Emergency Services at Your Fingertip – A Project by <br />
-                Government of the People’s Republic of Bangladesh
-            </p>
+                    <span class="text-base sm:text-lg lg:text-xl font-bold text-green-800">
+                        Emergency <br /> Helpline
+                    </span>
+                </a>
+            </div>
+            <div class="flex gap-2">
+                <div class="rounded-3xl py-2 px-5 bg-green-200 border-none flex items-center">
+                    <span class="px-2 font-bold text-sm sm:text-base">0</span>
+                    <img class="w-4" src="./assets/heart.png" alt="">
+                </div>
+                <div class="rounded-3xl py-2 px-3 bg-green-200 border-none flex items-center">
+                    <span class="px-2 font-bold text-sm sm:text-base">100</span>
+                    <img class="w-4" src="./assets/coin.png" alt="">
+                </div>
+                <div class="rounded-3xl py-2 px-3 bg-green-600 text-white border-none text-sm sm:text-base">
+                    2 Copy
+                </div>
+            </div>
         </div>
-    </div>
+
+        <!-- Hero Section -->
+        <div class="hero min-h-[300px] bg-gradient-to-r from-green-900 to-green-700">
+            <div class="hero-content text-center flex flex-col">
+                <img src="./assets/logo-dark.png" alt="BD logo" class="w-20 h-20 mb-4" />
+                <h1 class="text-2xl md:text-4xl font-bold text-white">
+                    Emergency Helpline
+                </h1>
+                <p class="text-white mt-2 text-sm md:text-base lg:text-lg">
+                    Government Emergency Services at Your Fingertip – A Project by <br />
+                    Government of the People’s Republic of Bangladesh
+                </p>
+            </div>
+        </div>
+    </header>
+
+    <main class="container mx-auto">
+        <!-- Main Grid -->
+        <div class=" p-4 grid md:grid-cols-4 gap-4">
+            <!-- call history  -->
+            <div class="card bg-white shadow rounded-xl order-1 md:order-last">
+                <div class="card-body">
+                    <div class="flex justify-between items-center">
+                        <h2 class="font-bold flex items-center gap-2 text-base sm:text-lg">
+                            <i data-lucide="clock"></i> Call History
+                        </h2>
+                        <button class="btn btn-xs bg-green-600 text-white">Clear</button>
+                    </div>
+                    <div class="mt-4 space-y-3">
+                        <div class="flex justify-between">
+                            <div>
+                                <p class="font-medium text-sm sm:text-base">Fire Service Number</p>
+                                <p class="text-xs sm:text-sm text-gray-500">999</p>
+                            </div>
+                            <span class="text-xs sm:text-sm text-gray-500">11:36:58 AM</span>
+                        </div>
+                        <div class="flex justify-between">
+                            <div>
+                                <p class="font-medium text-sm sm:text-base">National Emergency Number</p>
+                                <p class="text-xs sm:text-sm text-gray-500">1994-999999</p>
+                            </div>
+                            <span class="text-xs sm:text-sm text-gray-500">11:36:58 AM</span>
+                        </div>
+                        <div class="flex justify-between">
+                            <div>
+                                <p class="font-medium text-sm sm:text-base">Fire Service Number</p>
+                                <p class="text-xs sm:text-sm text-gray-500">999</p>
+                            </div>
+                            <span class="text-xs sm:text-sm text-gray-500">11:36:58 AM</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 1 -->
+            <div class="card bg-white shadow hover:shadow-lg hover:scale-105 transition rounded-xl relative order-2">
+                <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500">
+                    <i data-lucide="heart"></i>
+                </button>
+                <div class="card-body">
+                    <div class="flex items-center gap-3">
+                        <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center">
+                            <img src="./assets/emergency.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="font-bold text-sm sm:text-base md:text-lg"> Emergency Service</h2>
+                            <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                        </div>
+                    </div>
+                    <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                    <div class="flex gap-2 mt-4">
+                        <button class="btn btn-sm">📋 Copy</button>
+                        <button class="btn btn-sm bg-green-600 text-white">📞 Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="card bg-white shadow hover:shadow-lg hover:scale-105 transition rounded-xl relative order-3">
+                <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500">
+                    <i data-lucide="heart"></i>
+                </button>
+                <div class="card-body">
+                    <div class="flex items-center gap-3">
+                        <div class="w-12 h-12 rounded-full bg-blue-100 flex items-center justify-center">
+                            <img src="./assets/police.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="font-bold text-sm sm:text-base md:text-lg">Police</h2>
+                            <p class="text-xs sm:text-sm text-gray-500">Law Service</p>
+                        </div>
+                    </div>
+                    <p class="text-xl md:text-2xl font-bold mt-4">16430</p>
+                    <div class="flex gap-2 mt-4">
+                        <button class="btn btn-sm">📋 Copy</button>
+                        <button class="btn btn-sm bg-green-600 text-white">📞 Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="card bg-white shadow hover:shadow-lg hover:scale-105 transition rounded-xl relative order-4">
+                <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500">
+                    <i data-lucide="heart"></i>
+                </button>
+                <div class="card-body">
+                    <div class="flex items-center gap-3">
+                        <div class="w-12 h-12 rounded-full bg-orange-100 flex items-center justify-center">
+                            <i data-lucide="fire-extinguisher" class="text-orange-500"></i>
+                        </div>
+                        <div>
+                            <h2 class="font-bold text-sm sm:text-base md:text-lg">Fire Service Number</h2>
+                            <p class="text-xs sm:text-sm text-gray-500">Fire Service</p>
+                        </div>
+                    </div>
+                    <p class="text-xl md:text-2xl font-bold mt-4">16103</p>
+                    <div class="flex gap-2 mt-4">
+                        <button class="btn btn-sm">📋 Copy</button>
+                        <button class="btn btn-sm bg-green-600 text-white">📞 Call</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Lucide Init -->
+        <script src="https://unpkg.com/lucide@latest"></script>
+        <script>
+            lucide.createIcons();
+        </script>
+    </main>
 
 </body>
 
