--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <!-- Hero Section -->
-        <div class="hero min-h-[300px] bg-gradient-to-r from-green-900 to-green-700">
+        <div class="hero min-h-[300px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223]">
             <div class="hero-content text-center flex flex-col">
                 <img src="./assets/logo-dark.png" alt="BD logo" class="w-20 h-20 mb-4" />
                 <h1 class="text-2xl md:text-4xl font-bold text-white">
@@ -56,113 +56,59 @@
         </div>
     </header>
 
-    <main class="container mx-auto">
+    <main class=" bg-[#f5fff6]">
         <!-- Main Grid -->
-        <div class=" p-4 grid md:grid-cols-4 gap-4">
-            <!-- call history  -->
-            <div class="card bg-white shadow rounded-xl order-1 md:order-last">
-                <div class="card-body">
-                    <div class="flex justify-between items-center">
-                        <h2 class="font-bold flex items-center gap-2 text-base sm:text-lg">
-                            <i data-lucide="clock"></i> Call History
-                        </h2>
-                        <button class="btn btn-xs bg-green-600 text-white">Clear</button>
-                    </div>
-                    <div class="mt-4 space-y-3">
-                        <div class="flex justify-between">
-                            <div>
-                                <p class="font-medium text-sm sm:text-base">Fire Service Number</p>
-                                <p class="text-xs sm:text-sm text-gray-500">999</p>
+        <div class="container mx-auto p-4">
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+
+                <!-- বাম কলাম -->
+                <div class="md:col-span-3 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <!-- Emergency Service  -->
+                    <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
+                        <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
+                                data-lucide="heart"></i> </button>
+                        <div class="card-body">
+                            <div class="flex items-center gap-3">
+                                <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
+                                        src="./assets/emergency.png" alt=""> </div>
+                                <div>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> Emergency Service</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                                </div>
                             </div>
-                            <span class="text-xs sm:text-sm text-gray-500">11:36:58 AM</span>
+                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
+                                    class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
                         </div>
-                        <div class="flex justify-between">
-                            <div>
-                                <p class="font-medium text-sm sm:text-base">National Emergency Number</p>
-                                <p class="text-xs sm:text-sm text-gray-500">1994-999999</p>
+                    </div>
+
+
+                </div>
+
+                <!-- ডান কলাম (ফিক্সড) -->
+                <div class="md:col-span-1">
+                    <div class="sticky top-4">
+                        <div class="card bg-white shadow rounded-xl">
+                            <div class="card-body">
+                                <h2 class="font-bold flex items-center gap-2 text-base sm:text-lg">
+                                    <i data-lucide="clock"></i> Call History
+                                </h2>
+                                <div class="mt-4 space-y-3">
+                                    <div class="flex justify-between">
+                                        <div>
+                                            <p class="font-medium text-sm sm:text-base">Fire Service Number</p>
+                                            <p class="text-xs sm:text-sm text-gray-500">999</p>
+                                        </div>
+                                        <span class="text-xs sm:text-sm text-gray-500">11:36:58 AM</span>
+                                    </div>
+                                    <!-- আরও history items -->
+                                </div>
                             </div>
-                            <span class="text-xs sm:text-sm text-gray-500">11:36:58 AM</span>
-                        </div>
-                        <div class="flex justify-between">
-                            <div>
-                                <p class="font-medium text-sm sm:text-base">Fire Service Number</p>
-                                <p class="text-xs sm:text-sm text-gray-500">999</p>
-                            </div>
-                            <span class="text-xs sm:text-sm text-gray-500">11:36:58 AM</span>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <!-- Card 1 -->
-            <div class="card bg-white shadow hover:shadow-lg hover:scale-105 transition rounded-xl relative order-2">
-                <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500">
-                    <i data-lucide="heart"></i>
-                </button>
-                <div class="card-body">
-                    <div class="flex items-center gap-3">
-                        <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center">
-                            <img src="./assets/emergency.png" alt="">
-                        </div>
-                        <div>
-                            <h2 class="font-bold text-sm sm:text-base md:text-lg"> Emergency Service</h2>
-                            <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
-                        </div>
-                    </div>
-                    <p class="text-xl md:text-2xl font-bold mt-4">999</p>
-                    <div class="flex gap-2 mt-4">
-                        <button class="btn btn-sm">📋 Copy</button>
-                        <button class="btn btn-sm bg-green-600 text-white">📞 Call</button>
-                    </div>
-                </div>
             </div>
-
-            <!-- Card 2 -->
-            <div class="card bg-white shadow hover:shadow-lg hover:scale-105 transition rounded-xl relative order-3">
-                <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500">
-                    <i data-lucide="heart"></i>
-                </button>
-                <div class="card-body">
-                    <div class="flex items-center gap-3">
-                        <div class="w-12 h-12 rounded-full bg-blue-100 flex items-center justify-center">
-                            <img src="./assets/police.png" alt="">
-                        </div>
-                        <div>
-                            <h2 class="font-bold text-sm sm:text-base md:text-lg">Police</h2>
-                            <p class="text-xs sm:text-sm text-gray-500">Law Service</p>
-                        </div>
-                    </div>
-                    <p class="text-xl md:text-2xl font-bold mt-4">16430</p>
-                    <div class="flex gap-2 mt-4">
-                        <button class="btn btn-sm">📋 Copy</button>
-                        <button class="btn btn-sm bg-green-600 text-white">📞 Call</button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Card 3 -->
-            <div class="card bg-white shadow hover:shadow-lg hover:scale-105 transition rounded-xl relative order-4">
-                <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500">
-                    <i data-lucide="heart"></i>
-                </button>
-                <div class="card-body">
-                    <div class="flex items-center gap-3">
-                        <div class="w-12 h-12 rounded-full bg-orange-100 flex items-center justify-center">
-                            <i data-lucide="fire-extinguisher" class="text-orange-500"></i>
-                        </div>
-                        <div>
-                            <h2 class="font-bold text-sm sm:text-base md:text-lg">Fire Service Number</h2>
-                            <p class="text-xs sm:text-sm text-gray-500">Fire Service</p>
-                        </div>
-                    </div>
-                    <p class="text-xl md:text-2xl font-bold mt-4">16103</p>
-                    <div class="flex gap-2 mt-4">
-                        <button class="btn btn-sm">📋 Copy</button>
-                        <button class="btn btn-sm bg-green-600 text-white">📞 Call</button>
-                    </div>
-                </div>
-            </div>
-
         </div>
 
         <!-- Lucide Init -->
