--- a/index.html
+++ b/index.html
@@ -81,6 +81,150 @@
                                     class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
                         </div>
                     </div>
+                    <!-- child support  -->
+                    <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
+                        <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
+                                data-lucide="heart"></i> </button>
+                        <div class="card-body">
+                            <div class="flex items-center gap-3">
+                                <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
+                                        src="./assets/emergency.png" alt=""> </div>
+                                <div>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> child support</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                                </div>
+                            </div>
+                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
+                                    class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
+                        </div>
+                    </div>
+                    <!-- child support  -->
+                    <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
+                        <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
+                                data-lucide="heart"></i> </button>
+                        <div class="card-body">
+                            <div class="flex items-center gap-3">
+                                <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
+                                        src="./assets/emergency.png" alt=""> </div>
+                                <div>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> child support</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                                </div>
+                            </div>
+                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
+                                    class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
+                        </div>
+                    </div>
+                    <!-- child support  -->
+                    <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
+                        <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
+                                data-lucide="heart"></i> </button>
+                        <div class="card-body">
+                            <div class="flex items-center gap-3">
+                                <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
+                                        src="./assets/emergency.png" alt=""> </div>
+                                <div>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> child support</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                                </div>
+                            </div>
+                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
+                                    class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
+                        </div>
+                    </div>
+                    <!-- child support  -->
+                    <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
+                        <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
+                                data-lucide="heart"></i> </button>
+                        <div class="card-body">
+                            <div class="flex items-center gap-3">
+                                <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
+                                        src="./assets/emergency.png" alt=""> </div>
+                                <div>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> child support</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                                </div>
+                            </div>
+                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
+                                    class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
+                        </div>
+                    </div>
+                    <!-- child support  -->
+                    <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
+                        <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
+                                data-lucide="heart"></i> </button>
+                        <div class="card-body">
+                            <div class="flex items-center gap-3">
+                                <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
+                                        src="./assets/emergency.png" alt=""> </div>
+                                <div>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> child support</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                                </div>
+                            </div>
+                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
+                                    class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
+                        </div>
+                    </div>
+                    <!-- child support  -->
+                    <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
+                        <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
+                                data-lucide="heart"></i> </button>
+                        <div class="card-body">
+                            <div class="flex items-center gap-3">
+                                <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
+                                        src="./assets/emergency.png" alt=""> </div>
+                                <div>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> child support</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                                </div>
+                            </div>
+                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
+                                    class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
+                        </div>
+                    </div>
+                    <!-- child support  -->
+                    <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
+                        <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
+                                data-lucide="heart"></i> </button>
+                        <div class="card-body">
+                            <div class="flex items-center gap-3">
+                                <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
+                                        src="./assets/emergency.png" alt=""> </div>
+                                <div>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> child support</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                                </div>
+                            </div>
+                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
+                                    class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
+                        </div>
+                    </div>
+                    <!-- child support  -->
+                    <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
+                        <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
+                                data-lucide="heart"></i> </button>
+                        <div class="card-body">
+                            <div class="flex items-center gap-3">
+                                <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
+                                        src="./assets/emergency.png" alt=""> </div>
+                                <div>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> child support</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                                </div>
+                            </div>
+                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
+                                    class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
+                        </div>
+                    </div>
 
 
                 </div>
