card design almost done

--- a/index.html
+++ b/index.html
@@ -119,20 +119,38 @@
                                     class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
                         </div>
                     </div>
-                    <!-- child support  -->
+                    <!-- Ambulance  -->
                     <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
                         <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
                                 data-lucide="heart"></i> </button>
                         <div class="card-body">
                             <div class="flex items-center gap-3">
                                 <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
-                                        src="./assets/emergency.png" alt=""> </div>
+                                        src="./assets/ambulance.png" alt=""> </div>
                                 <div>
-                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> child support</h2>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> Ambulance Service </h2>
                                     <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
                                 </div>
                             </div>
-                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <p class="text-xl md:text-2xl font-bold mt-4">9331431</p>
+                            <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
+                                    class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
+                        </div>
+                    </div>
+                    <!-- Railway Central Helpline  -->
+                    <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
+                        <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
+                                data-lucide="heart"></i> </button>
+                        <div class="card-body">
+                            <div class="flex items-center gap-3">
+                                <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
+                                        src="./assets/Bangladesh-Railway.png" alt=""> </div>
+                                <div>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg">Railway Central Helpline</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">railway.gov.bd</p>
+                                </div>
+                            </div>
+                            <p class="text-xl md:text-2xl font-bold mt-4">131</p>
                             <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
                                     class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
                         </div>
@@ -144,7 +162,7 @@
                         <div class="card-body">
                             <div class="flex items-center gap-3">
                                 <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
-                                        src="./assets/emergency.png" alt=""> </div>
+                                        src="./assets/c.jpg" alt=""> </div>
                                 <div>
                                     <h2 class="font-bold text-sm sm:text-base md:text-lg">Women and child support</h2>
                                     <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
@@ -155,39 +173,40 @@
                                     class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
                         </div>
                     </div>
-                    
-                    <!-- child support  -->
+
+
+                    <!-- Brack  -->
                     <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
                         <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
                                 data-lucide="heart"></i> </button>
                         <div class="card-body">
                             <div class="flex items-center gap-3">
                                 <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
-                                        src="./assets/emergency.png" alt=""> </div>
+                                        src="./assets/brac.png" alt=""> </div>
                                 <div>
-                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> child support</h2>
-                                    <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg">Brack</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">brack.net</p>
                                 </div>
                             </div>
-                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <p class="text-xl md:text-2xl font-bold mt-4">612</p>
                             <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
                                     class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
                         </div>
                     </div>
-                    <!-- child support  -->
+                    <!-- NID  -->
                     <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
                         <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <i
                                 data-lucide="heart"></i> </button>
                         <div class="card-body">
                             <div class="flex items-center gap-3">
                                 <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
-                                        src="./assets/emergency.png" alt=""> </div>
+                                        src="./assets/NID.png" alt=""> </div>
                                 <div>
-                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> child support</h2>
-                                    <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
+                                    <h2 class="font-bold text-sm sm:text-base md:text-lg"> NID Service</h2>
+                                    <p class="text-xs sm:text-sm text-gray-500">nid.gov.bd</p>
                                 </div>
                             </div>
-                            <p class="text-xl md:text-2xl font-bold mt-4">999</p>
+                            <p class="text-xl md:text-2xl font-bold mt-4">105</p>
                             <div class="flex gap-2 mt-4"> <button class="btn btn-sm">📋 Copy</button> <button
                                     class="btn btn-sm bg-green-600 text-white">📞 Call</button> </div>
                         </div>
