all section title pascale case

--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                             <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
                                     src="./assets/c.jpg" alt=""> </div>
                             <div>
-                                <h2 class=" cardTitleText font-bold text-sm sm:text-base md:text-lg ">Women and child
-                                    support</h2>
+                                <h2 class=" cardTitleText font-bold text-sm sm:text-base md:text-lg ">Women And Child
+                                    Support</h2>
                                 <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
                             </div>
                         </div>
@@ -446,7 +446,7 @@
                             <div class="w-12 h-12 rounded-full bg-red-100 flex items-center justify-center"> <img
                                     src="./assets/emergency.png" alt=""> </div>
                             <div>
-                                <h2 class=" cardTitleText font-bold text-sm sm:text-base md:text-lg "> child support
+                                <h2 class=" cardTitleText font-bold text-sm sm:text-base md:text-lg "> Child Support
                                 </h2>
                                 <p class="text-xs sm:text-sm text-gray-500">Emergency</p>
                             </div>
