history function clear added

--- a/index.html
+++ b/index.html
@@ -494,19 +494,12 @@
                                         <path d="M12 7v5l4 2" />
                                     </svg> Call History
                                 </h2>
-                                <button id="allCopied"
+                                <button id="ClearBtn"
                                     class="rounded-3xl py-2 px-3 bg-green-600 text-white border-none text-sm sm:text-base">
                                     Clear </button>
                             </div>
                             <div id="historyContainer" class="mt-4 space-y-3">
-                                <div
-                                    class="flex justify-between space-y-2 bg-[#91a791] p-4 rounded-md text-black font-medium">
-                                    <div>
-                                        <p id="historyTitle" class=" text-sm sm:text-base">Fire Service Number</p>
-                                        <p id="historyNumber" class="text-xs sm:text-sm ">999</p>
-                                    </div>
-                                    <span id="historyTime" class="text-xs sm:text-sm ">11:36:58 AM</span>
-                                </div>
+                              
                             </div>
                         </div>
                     </div>
