--- a/index.html
+++ b/index.html
@@ -61,11 +61,8 @@
             </div>
         </div>
     </header>
-    <!-- empty -->
 
-    <!--  -->
-
-    <main class=" bg-[#f5fff6]">
+    <main class=" bg-[#f5fff6] my-4">
         <!-- Main Grid -->
         <div class="container mx-auto p-4 grid grid-cols-1 md:grid-cols-4 gap-4">
 
@@ -345,7 +342,7 @@
                 </div>
 
 
-                <!-- Brack  -->
+                <!-- brack  -->
                 <div class="card bg-white shadow hover:shadow-lg hover:scale-102 transition rounded-xl relative ">
                     <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500"> <svg id="heartIcon"
                             xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -495,11 +492,11 @@
                                     </svg> Call History
                                 </h2>
                                 <button id="ClearBtn"
-                                    class="rounded-3xl py-2 px-3 bg-green-600 text-white border-none text-sm sm:text-base">
+                                    class=" cursor-pointer rounded-3xl py-2 px-3 bg-green-600 text-white border-none text-sm sm:text-base">
                                     Clear </button>
                             </div>
                             <div id="historyContainer" class="mt-4 space-y-3">
-                              
+
                             </div>
                         </div>
                     </div>
@@ -510,7 +507,7 @@
 
 
     </main>
-    <!-- Lucide Init -->
+    <!-- javascript linked -->
     <script src="./js/index.js"></script>
 
 </body>
