--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="hero-content text-center flex flex-col">
                 <img src="./assets/logo-dark.png" alt="BD logo" class="w-20 h-20 mb-4" />
                 <h1 class="text-2xl md:text-4xl font-bold text-white">
-                    Emergency Helpline
+                    Emergency Helpline Portal
                 </h1>
                 <p class="text-white mt-2 text-sm md:text-base lg:text-lg">
                     Government Emergency Services at Your Fingertip – A Project by <br />
